--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1990,7 +1990,7 @@ a.back-to-top:hover, a.back-to-top:focus {
 
 /* Pricing Ticket */
 #pricing {
-  background: url(http://geu.ac.in/international-conference/grand-pro-opl/grand-pro-opl/assets/img/background/bg-pricing.jpg);
+  background: url(/assets/img/background/bg-pricing.jpg);
 
   overflow: hidden;
   position: relative;
